--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - node/install-packages
+      - node/install-packages:
+          - override-ci-command: npm i
       - run:
           name: Lint
           command: npm run lint
