--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          - override-ci-command: npm i
+          override-ci-command: npm i
       - run:
           name: Lint
           command: npm run lint
