--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "start-frontend": "nx serve",
-    "start-backend": "nx serve api",
+    "start": "node dist/apps/api/main.js",
+    "serve": "nx serve",
     "build": "nx build",
     "test": "nx test",
     "prepare": "husky install",
