--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "node dist/apps/api/main.js",
     "serve": "nx serve",
-    "build": "nx build",
+    "build": "npm run backend:build && npm run frontend:build",
+    "frontend:build": "nx build ux-films-finder --prod",
+    "backend:build": "nx build api --prod",
     "test": "nx test",
     "prepare": "husky install",
     "lint": "nx workspace-lint && nx run-many --all --target=lint",
