--- a/apps/ux-films-finder/.eslintrc.json
+++ b/apps/ux-films-finder/.eslintrc.json
@@ -8,7 +8,13 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
+      "parserOptions": {
+        "project": [
+          "apps/ux-films-finder/tsconfig.*?.json"
+        ]
+      },
       "rules": {
+        "quotes": ["error", "single"],
         "@angular-eslint/directive-selector": [
           "error",
           {
