--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.1.4",
     "@nrwl/angular": "13.7.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "keen-slider": "^6.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
