--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.2.1",
+    "@angular/material": "^13.2.2",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.1.4",
     "@nrwl/angular": "13.7.3",
+    "angular-localize": "^2.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "keen-slider": "^6.6.3",
     "reflect-metadata": "^0.1.13",
