--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nrwl/angular": "13.7.3",
     "eslint-plugin-prettier": "^4.0.0",
     "keen-slider": "^6.6.3",
+    "ngx-videogular": "^13.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
